--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Webpack Starter Kit</title>
+    <title>Countries Finder</title>
   </head>
 
-  <body></body>
+  <body>
+    <div class="mainContainer">
+      <form action="" class="form">
+        <input type="text" data-js="country-name" value="" />
+      </form>
+      <div class="countriesContainer">
+        <ul class="listCountries"></ul>
+      </div>
+      <div class="countryContainer"></div>
+    </div>
+  </body>
 </html>
